tests/ui/structs/default-field-values/post-mono.indirect.stderr
error[E0080]: attempt to divide `1_usize` by zero
  --> $DIR/post-mono.rs:7:24
   |
LL |     post_mono: usize = X / 0,
   |                        ^^^^^ evaluation of `Z::<1>::post_mono::{constant#0}` failed here

note: erroneous constant encountered
  --> $DIR/post-mono.rs:12:19
   |
LL |     let x: Z<X> = Z { .. };
   |                   ^^^^^^^^

note: erroneous constant encountered
  --> $DIR/post-mono.rs:12:19
   |
LL |     let x: Z<X> = Z { .. };
   |                   ^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

note: the above error was encountered while instantiating `fn indirect::<1>`
  --> $DIR/post-mono.rs:22:5
   |
LL |     indirect::<1>();
   |     ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
